@@ -1530,6 +1530,7 @@ const u16 gEggMoves[] = {
 		MOVE_ICICLE_CRASH,
 		MOVE_PUNISHMENT,
 		MOVE_PURSUIT,
+		MOVE_RAZOR_WIND,
 		MOVE_REFLECT,
 		MOVE_SPITE,
 		MOVE_THROAT_CHOP),
